# JiraHub

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
.streamlit/: config.toml
alembic/: env.py
alembic/versions/: a8c523c116da_add_jira_email_to_users.py  e7ea8cb49556_initial_schema.py  f0ae3fa7ad6c_add_user_project_table.py  f54bdc7240eb_user_project_json_boards.py
app/: main.py
app/core/: config.py  constants.py  logger.py  security.py
app/core/exceptions/: base.py  domain.py
app/models/: base.py  db.py  ignored_issue_type.py  ignored_ticket.py  session.py  team_member.py  user.py  user_project.py
app/pages/: admin.py  dashboard.py  insights.py  jira_connect.py  login.py  member_detail.py  project_setup.py  register.py  settings.py  ticket_detail.py
app/repos/: base.py  ignored_issue_type.py  ignored_ticket.py  session.py  team_member.py  user.py  user_project.py
app/schemas/: base.py  session.py  settings.py  team_member.py  user.py  user_project.py
app/schemas/jira/: board.py  changelog.py  issue.py  sprint.py  user.py
app/services/: auth_service.py  cache.py  jira_client.py
app/utils/: async_helpers.py  cookies.py  metrics.py
scripts/: alembic.sh  generate_diagrams.py
