[project]
name = "jira-automation"
version = "0.1.0"
description = "Jira Team Management Dashboard - Streamlit app for managing team members, tracking tasks, and generating insights"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.41.0",
    "httpx>=0.28.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "email-validator>=2.2.0",
    "pwdlib[argon2]>=0.2.1",
    "cryptography>=44.0.0",
    "redis>=5.2.0",
    "loguru>=0.7.3",
    "extra-streamlit-components>=0.1.71",
    "yarl>=1.18.0",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=26.1.0",
    "isort>=7.0.0",
    "pre-commit>=4.5.1",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.hatch.build.targets.wheel]
packages = ["app"]


[tool.black]
line-length = 100
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | __pycache__
    | .*/__init__.py
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 100
use_parentheses = true
ensure_newline_before_comments = true
remove_redundant_aliases = true
combine_as_imports = true
combine_star = true
skip_glob = [
    "*/__init__.py",
    "**/__pycache__/*",
    ".venv/*",
    "venv/*",
    "env/*"
]
skip = [
    ".gitignore",
    ".dockerignore",
    ".env",
    ".venv",
    "venv",
    "env",
    "__init__.py",
]
extend_skip = [".md", ".json"]
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER"
]
default_section = "THIRDPARTY"
